Refactor TimeSeriesMetadataFieldBlockLoader
Rename BlockLoaderFunctionConfig.TimeSeriesMetadata record fields to be
more descriptive: loadMetrics -> loadMetricFields, withoutFields ->
skipFieldNames.

Rename timeSeriesMetadata() -> lookupTimeSeriesMetadataFieldNames()
(static) and inner class TimeSeries -> TimeSeriesReader.

Rename MappingLookup private fields inferenceFields ->
indexInferenceFields, syntheticVectorFields -> indexSyntheticVectorFields,
and switch from Map.copyOf/List.copyOf to Collections.unmodifiable*
for consistency with the new indexDimensionFieldMappers/
indexMetricFieldMappers fields added in the preceding fix commit.

Remove testWildcardDimensionSettingUsedWhenNothingExcluded: the
settings-based fast path it covered no longer exists.