@@ -55,8 +55,8 @@ public final class MappingLookup {
     /** Full field name to mapper */
     private final Map<String, Mapper> fieldMappers;
     private final Map<String, ObjectMapper> objectMappers;
-    private final Map<String, InferenceFieldMetadata> inferenceFields;
-    private final Set<String> syntheticVectorFields;
+    private final Map<String, InferenceFieldMetadata> indexInferenceFields;
+    private final Set<String> indexSyntheticVectorFields;
     private final Set<FieldMapper> indexDimensionFieldMappers;
     private final Set<FieldMapper> indexMetricFieldMappers;
     private final int runtimeFieldMappersCount;
@@ -226,7 +226,7 @@ public final class MappingLookup {
         this.fieldTypeLookup = new FieldTypeLookup(mappers, aliasMappers, passThroughSources, runtimeFields, prefixProperties);
 
         Map<String, InferenceFieldMetadata> inferenceFields = new HashMap<>();
-        List<String> syntheticVectorFields = new ArrayList<>();
+        Set<String> syntheticVectorFields = new LinkedHashSet<>();
         for (FieldMapper mapper : mappers) {
             if (mapper instanceof InferenceFieldMapper inferenceFieldMapper) {
                 inferenceFields.put(mapper.fullPath(), inferenceFieldMapper.getMetadata(fieldTypeLookup.sourcePaths(mapper.fullPath())));
@@ -235,8 +235,8 @@ public final class MappingLookup {
                 syntheticVectorFields.add(mapper.fullPath());
             }
         }
-        this.inferenceFields = Map.copyOf(inferenceFields);
-        this.syntheticVectorFields = Set.copyOf(syntheticVectorFields);
+        this.indexInferenceFields = Collections.unmodifiableMap(inferenceFields);
+        this.indexSyntheticVectorFields = Collections.unmodifiableSet(syntheticVectorFields);
 
         if (runtimeFields.isEmpty()) {
             // without runtime fields this is the same as the field type lookup
@@ -251,13 +251,13 @@ public final class MappingLookup {
             );
         }
         // make all fields into compact+fast immutable maps
-        this.fieldMappers = Map.copyOf(fieldMappers);
+        this.fieldMappers = Collections.unmodifiableMap(fieldMappers);
         this.indexDimensionFieldMappers = Collections.unmodifiableSet(dimensionMappers);
         this.indexMetricFieldMappers = Collections.unmodifiableSet(metricMappers);
-        this.objectMappers = Map.copyOf(objects);
+        this.objectMappers = Collections.unmodifiableMap(objects);
         this.runtimeFieldMappersCount = runtimeFields.size();
-        this.indexAnalyzers = Map.copyOf(indexAnalyzers);
-        this.indexTimeScriptMappers = List.copyOf(indexTimeScriptMappers);
+        this.indexAnalyzers = Collections.unmodifiableMap(indexAnalyzers);
+        this.indexTimeScriptMappers = Collections.unmodifiableList(indexTimeScriptMappers);
         this.indexMode = indexMode;
 
         runtimeFields.stream().flatMap(RuntimeField::asMappedFieldTypes).map(MappedFieldType::name).forEach(this::validateDoesNotShadow);
@@ -387,11 +387,7 @@ public final class MappingLookup {
     }
 
     private void checkDimensionFieldLimit(long limit) {
-        long dimensionFieldCount = fieldMappers.values()
-            .stream()
-            .filter(m -> m instanceof FieldMapper && ((FieldMapper) m).fieldType().isDimension())
-            .count();
-        if (dimensionFieldCount > limit) {
+        if (indexDimensionFieldMappers.size() > limit) {
             throw new IllegalArgumentException("Limit of total dimension fields [" + limit + "] has been exceeded");
         }
     }
@@ -459,11 +455,11 @@ public final class MappingLookup {
      * Returns a map containing all fields that require to run inference (through the {@link InferenceService} prior to indexation.
      */
     public Map<String, InferenceFieldMetadata> inferenceFields() {
-        return inferenceFields;
+        return indexInferenceFields;
     }
 
     public Set<String> syntheticVectorFields() {
-        return syntheticVectorFields;
+        return indexSyntheticVectorFields;
     }
 
     public NestedLookup nestedLookup() {
